# retail-lakehouse-portfolio

retail-lakehouse-portfolio/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
retail-lakehouse-portfolio/artifacts/: kpi_report.md
retail-lakehouse-portfolio/data/raw/: campaigns.csv  customers.csv  order_items.csv  orders.csv  products.csv
retail-lakehouse-portfolio/docs/: architecture.md  roadmap.md
retail-lakehouse-portfolio/sql/gold/: 01_dim_customer.sql  02_dim_product.sql  03_dim_date.sql  04_fact_sales.sql  05_daily_sales_metrics.sql
retail-lakehouse-portfolio/sql/silver/: 01_silver_customers.sql  02_silver_products.sql  03_silver_orders.sql  04_silver_order_items.sql
retail-lakehouse-portfolio/src/retail_portfolio/: config.py
retail-lakehouse-portfolio/src/retail_portfolio/llm/: app.py  kpi_definitions.md
retail-lakehouse-portfolio/src/retail_portfolio/ml/: train_forecast.py
retail-lakehouse-portfolio/src/retail_portfolio/pipelines/: build_warehouse.py  generate_sample_data.py  ingest_raw.py  run_all.py
retail-lakehouse-portfolio/src/retail_portfolio/quality/: validate_warehouse.py
retail-lakehouse-portfolio/src/retail_portfolio/reporting/: generate_report.py
retail-lakehouse-portfolio/tests/: test_project_structure.py  test_sql_outputs.py
